--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         <span>L</span>
         <span>L</span>
         <span>O</span>
-        <span>K</span>
+        <span>G</span>
         <span>A</span>
-        <span>M</span>
-        <span>U</span>
+        <span>D</span>
+        <span>I</span>
+        <span>S</span>
     </div>
     <div class="description">
         <span>Aku punya hadiah spesial buat kamu nih....</span>
