--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <span>L</span>
         <span>L</span>
         <span>O</span>
-        <span>G</span>
+        <span>P</span>
         <span>A</span>
-        <span>D</span>
-        <span>I</span>
-        <span>S</span>
+        <span>N</span>
+        <span>T</span>
+        <span>E</span>
+        <span>K</span>
     </div>
     <div class="description">
         <span>Aku punya hadiah spesial buat kamu nih....</span>
