--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
         <span>L</span>
         <span>L</span>
         <span>O</span>
+        <span>A</span>
+        <span>C</span>
+        <span>E</span>
+        <span>P</span>
+        <span>K</span>
+        <span>A</span>
+        <span>M</span>
         <span>P</span>
         <span>A</span>
         <span>N</span>
-        <span>T</span>
-        <span>E</span>
-        <span>K</span>
+        <span>G</span>
     </div>
     <div class="description">
         <span>Aku punya hadiah spesial buat kamu nih....</span>
