--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <span>G</span>
     </div>
     <div class="description">
-        <span>Aku punya hadiah spesial buat kamu nih....</span>
+        <span>Aku punya hadiah spesial buat kamu nih...</span>
     </div>
     <div class="button">
         <button>
