--- a/index.html
+++ b/index.html
@@ -16,20 +16,14 @@
         <span>L</span>
         <span>L</span>
         <span>O</span>
+        <span>T</span>
         <span>A</span>
         <span>C</span>
-        <span>E</span>
-        <span>P</span>
-        <span>K</span>
         <span>A</span>
-        <span>M</span>
-        <span>P</span>
         <span>A</span>
-        <span>N</span>
-        <span>G</span>
     </div>
     <div class="description">
-        <span>Aku punya hadiah spesial buat kamu nih...</span>
+        <span>for u</span>
     </div>
     <div class="button">
         <button>
