--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <span>L</span>
         <span>L</span>
         <span>O</span>
-        <span>T</span>
-        <span>A</span>
-        <span>C</span>
+        <span>Y</span>
+        <span>O</span>
+        <span>L</span>
         <span>A</span>
         <span>A</span>
     </div>
     <div class="description">
-        <span>for u</span>
+        <span>this is for u..</span>
     </div>
     <div class="button">
         <button>
